fixing frontend and spacing for the map and rating box

--- a/frontend/src/components/NoAccountHomepage.module.css
+++ b/frontend/src/components/NoAccountHomepage.module.css
@@ -25,4 +25,5 @@
     display: flex;
     justify-content: center;
     padding-top: 2px;
+    padding-bottom: 30px;
 }
